--- a/templates/base.html
+++ b/templates/base.html
@@ -129,12 +129,8 @@
                 <li><a class="nav-link" href="#">Qo`shish</a></li>
               </ul>
             </li>
-            <li class="dropdown">
-              <a href="#" class="menu-toggle nav-link has-dropdown"><i data-feather="command"></i><span>Turnirlar</span></a>
-              <ul class="dropdown-menu">
-                <li><a class="nav-link" href="#">Ro`yxat</a></li>
-                <li><a class="nav-link" href="#">Qo`shish</a></li>
-              </ul>
+            <li>
+              <a href="{% url 'turnir_url' %}" class="nav-link"><i data-feather="command"></i><span>Turnirlar</span></a>
             </li>
           </ul>
         </aside>
