--- a/templates/turs.html
+++ b/templates/turs.html
@@ -12,7 +12,7 @@
             <div class="card">
               <div class="card-statistic-4">
                 <div class="align-items-center justify-content-between">
-                  <a class="row " href="#" style="text-decoration: none">
+                  <a class="row " href="{% url 'matches_url' tur.id %}" style="text-decoration: none">
                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 pr-0 pt-3">
                       <div class="card-content">
                         <h5 class="font-15">{{tur.name}}</h5>
