--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
   <link rel="stylesheet" href="{% static 'css/components.css' %}">
   <!-- Custom style CSS -->
-  <link rel="stylesheet" href="{% static 'css/custom.css">
+  <link rel="stylesheet" href="{% static 'css/custom.css '%}">
   <link rel='shortcut icon' type='image/x-icon' href="{% static 'img/favicon.ico' %}" />
 </head>
 
@@ -112,14 +112,13 @@
       <div class="main-sidebar sidebar-style-2">
         <aside id="sidebar-wrapper">
           <div class="sidebar-brand">
-            <a href="index.html"> <img alt="image" src="{% static 'img/logo.png' %}" class="header-logo" /> <span
+            <a href="{% url 'dashboard_url' %}"> <img alt="image" src="{% static 'img/logo.png' %}" class="header-logo" /> <span
                 class="logo-name">Otika</span>
             </a>
           </div>
           <ul class="sidebar-menu">
-            <li class="menu-header">Main</li>
             <li class="dropdown active">
-              <a href="index.html" class="nav-link"><i data-feather="monitor"></i><span>Dashboard</span></a>
+              <a href="{% url 'dashboard_url' %}" class="nav-link"><i data-feather="monitor"></i><span>Dashboard</span></a>
             </li>
             <li class="dropdown">
               <a href="#" class="menu-toggle nav-link has-dropdown"><i
@@ -141,9 +140,10 @@
         {% endblock content %}
       <footer class="main-footer">
         <div class="footer-left">
-          <a href="templateshub.net">Templateshub</a></a>
         </div>
         <div class="footer-right">
+          <a href="">Digital City</a>
+
         </div>
       </footer>
     </div>
