--- a/templates/turnir.html
+++ b/templates/turnir.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}  
-<div class="main-content" style="min-height: 842px;">
+<div class="main-content" >
     <section class="section">
       <div class="section-body">
         <div class="row">
@@ -9,28 +9,36 @@
             <div class="card">
               {% if turnirs %}
               <div class="card-header">
-                <h4>Hover</h4>
+                  <div class="">
+                        <h4>Turnirlar Jadvali</h4>
+                  </div>
+                <div class="pull-right">
+                    <button type="button" class="btn btn-primary" data-toggle="modal"
+                      data-target="#exampleModalCenter">Add</button>
+                </div>
               </div>
               <div class="card-body">
                 <table class="table table-hover table-dark">
                   <thead>
                     <tr>
-                      <th scope="col">#</th>
-                      <th scope="col">Nomi</th>
-                      <th scope="col">Boshanish sanasi</th>
-                      <th scope="col">Faolligi</th>
-                      <th scope="col">Batafsil</th>
-
+                      <th class="text-center" scope="col">#</th>
+                      <th class="text-center" scope="col">Nomi</th>
+                      <th class="text-center" scope="col">Boshanish sanasi</th>
+                      <th class="text-center" scope="col">Faolligi</th>
+                      <th class="text-center" scope="col">Batafsil</th>
+                      <th class="text-center" scope="col">Komanda qo'shish</th>
                     </tr>
                   </thead>
                   <tbody>
                     {% for turnir in turnirs %}
                     <tr>
-                      <th scope="row">{{forloop.counter}}</th>
-                      <td>{{turnir.name}}</td>
-                      <td>{{turnir.data_start}}</td>
-                      <td>Faol</td>
-                      <td><a href="{% url 'tur_url' turnir.pk %}">link</a></td>
+                      <th class="text-center" scope="row">{{forloop.counter}}</th>
+                      <td class="text-center">{{turnir.name}}</td>
+                      <td class="text-center">{{turnir.data_start|date:'Y-m-d'}}</td>
+                      <td class="text-center">Faol</td>
+                      <td class="text-center"><a href="{% url 'tur_url' turnir.pk %}">link</a></td>
+                      <td class="text-center"><button  type="button" class="btn btn-primary" data-toggle="modal"
+                      data-target="#exampleModalCenter{{ turnir.id }}">add club</button></td>
                     </tr>
                     {% endfor %}
                   </tbody>
@@ -42,92 +50,63 @@
         </div>
       </div>
     </section>
-    <div class="settingSidebar">
-      <a href="javascript:void(0)" class="settingPanelToggle"> <i class="fa fa-spin fa-cog"></i>
-      </a>
-      <div class="settingSidebar-body ps-container ps-theme-default" tabindex="2" style="overflow: hidden; outline: none;">
-        <div class=" fade show active">
-          <div class="setting-panel-header">Setting Panel
-          </div>
-          <div class="p-15 border-bottom">
-            <h6 class="font-medium m-b-10">Select Layout</h6>
-            <div class="selectgroup layout-color w-50">
-              <label class="selectgroup-item">
-                <input type="radio" name="value" value="1" class="selectgroup-input-radio select-layout" checked="">
-                <span class="selectgroup-button">Light</span>
-              </label>
-              <label class="selectgroup-item">
-                <input type="radio" name="value" value="2" class="selectgroup-input-radio select-layout">
-                <span class="selectgroup-button">Dark</span>
-              </label>
-            </div>
-          </div>
-          <div class="p-15 border-bottom">
-            <h6 class="font-medium m-b-10">Sidebar Color</h6>
-            <div class="selectgroup selectgroup-pills sidebar-color">
-              <label class="selectgroup-item">
-                <input type="radio" name="icon-input" value="1" class="selectgroup-input select-sidebar">
-                <span class="selectgroup-button selectgroup-button-icon" data-toggle="tooltip" data-original-title="Light Sidebar"><i class="fas fa-sun"></i></span>
-              </label>
-              <label class="selectgroup-item">
-                <input type="radio" name="icon-input" value="2" class="selectgroup-input select-sidebar" checked="">
-                <span class="selectgroup-button selectgroup-button-icon" data-toggle="tooltip" data-original-title="Dark Sidebar"><i class="fas fa-moon"></i></span>
-              </label>
-            </div>
-          </div>
-          <div class="p-15 border-bottom">
-            <h6 class="font-medium m-b-10">Color Theme</h6>
-            <div class="theme-setting-options">
-              <ul class="choose-theme list-unstyled mb-0">
-                <li title="white" class="active">
-                  <div class="white"></div>
-                </li>
-                <li title="cyan">
-                  <div class="cyan"></div>
-                </li>
-                <li title="black">
-                  <div class="black"></div>
-                </li>
-                <li title="purple">
-                  <div class="purple"></div>
-                </li>
-                <li title="orange">
-                  <div class="orange"></div>
-                </li>
-                <li title="green">
-                  <div class="green"></div>
-                </li>
-                <li title="red">
-                  <div class="red"></div>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="p-15 border-bottom">
-            <div class="theme-setting-options">
-              <label class="m-b-0">
-                <input type="checkbox" name="custom-switch-checkbox" class="custom-switch-input" id="mini_sidebar_setting">
-                <span class="custom-switch-indicator"></span>
-                <span class="control-label p-l-10">Mini Sidebar</span>
-              </label>
-            </div>
-          </div>
-          <div class="p-15 border-bottom">
-            <div class="theme-setting-options">
-              <label class="m-b-0">
-                <input type="checkbox" name="custom-switch-checkbox" class="custom-switch-input" id="sticky_header_setting">
-                <span class="custom-switch-indicator"></span>
-                <span class="control-label p-l-10">Sticky Header</span>
-              </label>
-            </div>
-          </div>
-          <div class="mt-4 mb-4 p-3 align-center rt-sidebar-last-ele">
-            <a href="#" class="btn btn-icon icon-left btn-primary btn-restore-theme">
-              <i class="fas fa-undo"></i> Restore Default
-            </a>
-          </div>
+    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+      aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <form action="{% url 'add-tournament' %}" method="post">
+                {% csrf_token %}
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalCenterTitle">Add Tournament</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                      <input type="text" class="form-control" name="name" placeholder="Tournament name">
+                      <input type="date" name="date" class="form-control mt-3">
+                  </div>
+                  <div class="modal-footer bg-whitesmoke br">
+                    <button type="submit" class="btn btn-primary">Save</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  </div>
+            </form>
         </div>
       </div>
-    <div id="ascrail2001" class="nicescroll-rails nicescroll-rails-vr" style="width: 8px; z-index: 999; cursor: default; position: absolute; top: 0px; left: 272px; height: 937px; display: none;"><div class="nicescroll-cursors" style="position: relative; top: 0px; float: right; width: 6px; height: 0px; background-color: rgb(66, 66, 66); border: 1px solid rgb(255, 255, 255); background-clip: padding-box; border-radius: 5px;"></div></div><div id="ascrail2001-hr" class="nicescroll-rails nicescroll-rails-hr" style="height: 8px; z-index: 999; top: 929px; left: 0px; position: absolute; cursor: default; display: none;"><div class="nicescroll-cursors" style="position: absolute; top: 0px; height: 6px; width: 0px; background-color: rgb(66, 66, 66); border: 1px solid rgb(255, 255, 255); background-clip: padding-box; border-radius: 5px;"></div></div></div>
-  </div>
+    </div>
+{% for i in turnirs %}
+    <div class="modal fade" id="exampleModalCenter{{ i.id }}" tabindex="-1" role="dialog"
+      aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <form action="{% url 'add-club' %}" method="post">
+                {% csrf_token %}
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalCenterTitle">Add Tournament</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                      <input type="hidden" name="tournament" value="{{ i.id }}">
+                      <select name="clubs" class="form-control" id="" multiple style="height: 300px">
+                          {% for x in clubs %}
+                            {% if x in i.clubs.all  %}
+                          <option value="{{ x.id }}" selected>{{ x.name }}</option>
+                            {% else %}
+                          <option value="{{ x.id }}">{{ x.name }}</option>
+                            {% endif %}
+                          {% endfor %}
+                      </select>
+                  </div>
+                  <div class="modal-footer bg-whitesmoke br">
+                    <button type="submit" class="btn btn-primary">Save</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  </div>
+            </form>
+        </div>
+      </div>
+    </div>
+{% endfor %}
+</div>
 {% endblock content %}
