--- a/templates/base.html
+++ b/templates/base.html
@@ -5,13 +5,14 @@
 <head>
   <meta charset="UTF-8">
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no" name="viewport">
-  <title>Otika - Admin Dashboard Template</title>
+  <title>Otika</title>
   <!-- General CSS Files -->
   <link rel="stylesheet" href="{% static 'css/app.min.css' %}">
   <!-- Template CSS -->
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
   <link rel="stylesheet" href="{% static 'css/components.css' %}">
   <!-- Custom style CSS -->
+
   <link rel="stylesheet" href="{% static 'css/custom.css '%}">
   <link rel='shortcut icon' type='image/x-icon' href="{% static 'img/favicon.ico' %}" />
 </head>
