--- a/templates/matches.html
+++ b/templates/matches.html
@@ -4,7 +4,7 @@
 <div class="main-content" style="min-height: 842px;">
 <div class="row">
     <div class="col-6">
-        <h2 class="section-title">{{tur.turnir}} chempionatining {{tur}} o`yinlari</h2>
+        <h2 class="section-title">{{tur.tournament}} chempionatining {{tur}} o`yinlari</h2>
         <p class="section-lead">
             {{tur}} boshlanish sanasi: {{tur.data_start|date:'Y-m-d'}}
         </p>
@@ -34,6 +34,53 @@
                             <h4>{{match.first_club}}  </h4>
                             <h4> {{match.first_club_result}} :  {{match.first_club_result}} </h4>
                             <h4>{{match.second_club}} </h4>
+                        </div>
+                        <div class="d-flex justify-content-around">
+                            <button type="button" class="btn btn-primary" data-toggle="modal"
+                 data-target="#exampleModalCenter{{ i.id }}">yakunlash</button>
+                        <div class="modal fade" id="exampleModalCenter{{ i.id }}" tabindex="-1" role="dialog"
+                              aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                              <div class="modal-dialog modal-dialog-centered" role="document">
+                                <div class="modal-content">
+                                    <form action="{% url 'close-match' %}" method="post">
+                                        {% csrf_token %}
+                                          <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalCenterTitle">Add Tournament</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                              <span aria-hidden="true">&times;</span>
+                                            </button>
+                                          </div>
+                                          <div class="modal-body">
+
+                                              <input type="hidden" name="match" value="{{ match.id }}">
+                                              <input type="hidden" name="round" value="{{ tur.id }}">
+                                              <div class="row">
+                                                    <div class="col-3">
+                                                      <h6>First club</h6>
+                                                    </div>
+                                                    <div class="col-2">
+                                                      <input type="text" class="form-control" name="first_club">
+                                                    </div>
+                                                  <div class="col-2 text-center">
+                                                      <h6>:</h6>
+                                                  </div>
+                                                    <div class="col-2">
+                                                      <input type="text" class="form-control" name="second_club">
+                                                    </div>
+                                                    <div class="col-3">
+                                                        <h6>Second club</h6>
+                                                    </div>
+
+                                              </div>
+                                          </div>
+                                          <div class="modal-footer bg-whitesmoke br">
+                                            <button type="submit" class="btn btn-primary">Save</button>
+                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                          </div>
+                                    </form>
+                                </div>
+                              </div>
+                            </div>
                         </div>
                     </div>
                 </div>
