--- a/templates/turs.html
+++ b/templates/turs.html
@@ -39,7 +39,7 @@
             <form action="{% url 'add-round' %}" method="post">
                 {% csrf_token %}
                   <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalCenterTitle">Add Tournament</h5>
+                    <h5 class="modal-title" id="exampleModalCenterTitle">Tur qoshish</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
