--- a/templates/matches.html
+++ b/templates/matches.html
@@ -32,20 +32,25 @@
                     <div class="card-body">
                         <div class="d-flex justify-content-around">
                             <h4>{{match.first_club}}  </h4>
-                            <h4> {{match.first_club_result}} :  {{match.first_club_result}} </h4>
+                            <h4> {{match.first_club_result}} :  {{match.second_club_result}} </h4>
                             <h4>{{match.second_club}} </h4>
                         </div>
                         <div class="d-flex justify-content-around">
+                            {% if match.status %}
                             <button type="button" class="btn btn-primary" data-toggle="modal"
-                 data-target="#exampleModalCenter{{ i.id }}">yakunlash</button>
-                        <div class="modal fade" id="exampleModalCenter{{ i.id }}" tabindex="-1" role="dialog"
+                 data-target="#exampleModalCenteradd{{ i.id }}">yakunlash</button>
+                            {% else %}
+                            <button type="button" class="btn btn-primary" data-toggle="modal"
+                 data-target="#exampleModalCenteradd{{ i.id }}" disabled>yakunlash</button>
+                            {% endif %}
+                            <div class="modal fade" id="exampleModalCenteradd{{ i.id }}" tabindex="-1" role="dialog"
                               aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
                               <div class="modal-dialog modal-dialog-centered" role="document">
                                 <div class="modal-content">
                                     <form action="{% url 'close-match' %}" method="post">
                                         {% csrf_token %}
                                           <div class="modal-header">
-                                            <h5 class="modal-title" id="exampleModalCenterTitle">Add Tournament</h5>
+                                            <h5 class="modal-title" id="exampleModalCenterTitle">Oyinni yakunlash</h5>
                                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                               <span aria-hidden="true">&times;</span>
                                             </button>
