--- a/templates/turnir.html
+++ b/templates/turnir.html
@@ -18,12 +18,16 @@
             <div class="card">
               <div class="card-statistic-4">
                 <div class="align-items-center justify-content-between">
-                  <a class="row " href="{% url 'tur_url' tur.pk %}" style="text-decoration: none">
+                  <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 pr-0 pt-3">
                       <div class="card-content">
-                        <h5 class="font-15">{{tur.name}}</h5>
-                        <h2 class="mb-3 font-18">{{tur.data_start|date:'Y-m-d'}}</h2>
+                        <h5 class="font-15"><a href="{% url 'tur_url' tur.pk %}" style="text-decoration: none; color: black">{{tur.name}}</a></h5>
+                        <h2 class="mb-3 font-18"><a href="{% url 'tur_url' tur.pk %}" style="text-decoration: none; color: black">{{tur.data_start|date:'Y-m-d'}}</a></h2>
                         <h2 class="mb-3 font-18">{{tur.clubs.all|length}} Jamoa</h2>
+                        <button class="btn" type="button" data-toggle="modal"
+                      data-target="#exampleModalCenterdelete{{ tur.id }}"><i style="color: red" class="fas fa-trash"></i></button>
+                        <button class="btn" type="button" data-toggle="modal"
+                      data-target="#exampleModalCenterEdit{{ tur.id }}"><i style="color: orange" class="fas fa-edit"></i></button>
                       </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 pl-0">
@@ -31,7 +35,7 @@
                         <img src="{% static 'img/banner/1.png' %}" alt="">
                       </div>
                     </div>
-                </a>
+                </div>
                 </div>
               </div>
             </div>
@@ -55,7 +59,7 @@
                   <div class="modal-body">
                       <input type="text" class="form-control" name="name" placeholder="Tournament name">
                       <input type="date" name="date" class="form-control mt-3">
-                      <select name="club" class="form-control mt-3" style="height: 200px" multiple>
+                      <select name="clubs" class="form-control mt-3" style="height: 200px" multiple>
                           {% for i in clubs %}
                           <option value="{{ i.id }}">{{ i.name }}</option>
                           {% endfor %}
@@ -69,5 +73,66 @@
         </div>
       </div>
     </div>
+{% for i in turnirs %}
+    <div class="modal fade" id="exampleModalCenterdelete{{ i.id }}" tabindex="-1" role="dialog"
+      aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <form action="{% url 'delete-tournament' i.id %}" method="post">
+                {% csrf_token %}
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalCenterTitle">Add Tournament</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                      Rostdan ham Turnirni ochirib yubormoqchimisiz?
+                  </div>
+                  <div class="modal-footer bg-whitesmoke br">
+                    <button type="submit" class="btn btn-primary">Ha</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Yoq</button>
+                  </div>
+            </form>
+        </div>
+      </div>
+    </div>
+{% endfor %}
+{% for i in turnirs %}
+    <div class="modal fade" id="exampleModalCenterEdit{{ i.id }}" tabindex="-1" role="dialog"
+      aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <form action="{% url 'change-tournament' i.id %}" method="post">
+                {% csrf_token %}
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalCenterTitle">Change Tournament</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                      <input type="text" class="form-control" name="name" placeholder="Tournament name" value="{{ i.name }}">
+                      <input type="date" name="date" class="form-control mt-3">
+                      <select name="clubs" class="form-control mt-3" style="height: 200px" multiple>
+                          {% for x in clubs %}
+                            {% if x in i.clubs.all %}
+                                <option value="{{ x.id }}" selected>{{ x.name }}</option>
+                            {% else %}
+                                <option value="{{ x.id }}">{{ x.name }}</option>
+                            {% endif %}
+                          {% endfor %}
+                      </select>
+                  </div>
+                  <div class="modal-footer bg-whitesmoke br">
+                    <button type="submit" class="btn btn-primary">Save</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  </div>
+            </form>
+        </div>
+      </div>
+    </div>
+{% endfor %}
+
 </div>
 {% endblock content %}
