--- a/templates/matches.html
+++ b/templates/matches.html
@@ -35,10 +35,13 @@
                             <h4> {{match.first_club_result}} :  {{match.second_club_result}} </h4>
                             <h4>{{match.second_club}} </h4>
                         </div>
+                        {% if match.status %}
                         <div class="d-flex justify-content-around">
-                            {% if match.status %}
-                            <button type="button" class="btn btn-primary" data-toggle="modal"
-                 data-target="#exampleModalCenteradd{{ i.id }}">yakunlash</button>
+                          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenteradd{{ i.id }}">yakunlash</button>
+                          {% else %}
+                          <div class="d-flex justify-content-start">
+                            <button class="btn" type="button" data-toggle="modal" data-target="#exampleModalCenterdelete{{ match.id }}"><i style="color: red" class="fas fa-trash"></i></button>
+                            <button class="btn" type="button" data-toggle="modal" data-target="#exampleModalCenterEdit{{ match.id }}"><i style="color: orange" class="fas fa-edit"></i></button>
                             {% endif %}
                             <div class="modal fade" id="exampleModalCenteradd{{ i.id }}" tabindex="-1" role="dialog"
                               aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
@@ -123,7 +126,92 @@
             </div>
           </div>
         </div>
-
     </div>
 </div>
+{% for i in matches %}
+    <div class="modal fade" id="exampleModalCenterdelete{{ i.id }}" tabindex="-1" role="dialog"
+      aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <form action="{% url 'delete-tournament' i.id %}" method="post">
+                {% csrf_token %}
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalCenterTitle">Add Tournament</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                      Rostdan ham Turnirni ochirib yubormoqchimisiz?
+                  </div>
+                  <div class="modal-footer bg-whitesmoke br">
+                    <button type="submit" class="btn btn-primary">Ha</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Yoq</button>
+                  </div>
+            </form>
+        </div>
+      </div>
+    </div>
+{% endfor %}
+{% for i in matches %}
+    <div class="modal fade" id="exampleModalCenterEdit{{ i.id }}" tabindex="-1" role="dialog"
+      aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <form action="{% url 'update-match'%}" method="post">
+                {% csrf_token %}
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalCenterTitle">O`yin natijasini o`zgartirish</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    <div class="row">
+                      <div class="col-6">
+                        <label>Birinchi jamoa</label>
+                        <select class="form-control" name="first_club" >
+                          {% for club in clubs %}
+                            {% if club == i.first_club %}
+                              <option selected value="{{club.id}}" >{{club}}</option>
+                            {% else %}
+                              <option value="{{club.id}}" >{{club}}</option>
+                            {% endif %}
+                          {% endfor %}
+                        </select>
+                      </div>
+                      <div class="col-6">
+                        <label>Ikkinchi jamoa</label>
+                        <select class="form-control" name="second_club">
+                          {% for club in clubs %}
+                            {% if club == i.second_club %}
+                              <option selected value="{{club.id}}" >{{club}}</option>
+                            {% else %}
+                              <option value="{{club.id}}" >{{club}}</option>
+                            {% endif %}
+                          {% endfor %}
+                        </select>
+                      </div>
+                    </div> <br>
+                    <div class="row">
+                      <div class="col-5">
+                        <input class="form-control" type="number" value="{{i.first_club_result}}" name="first_club_result">
+                      </div>
+                      <div class="col-2 text-center">
+                        <h3>:</h3>
+                    </div>
+                      <div class="col-5">
+                        <input class="form-control" type="number" value="{{i.second_club_result}}" name="second_club_result">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="modal-footer bg-whitesmoke br">
+                    <button type="submit" class="btn btn-primary">Saqlash</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Qaytish</button>
+                  </div>
+            </form>
+        </div>
+      </div>
+    </div>
+{% endfor %}
 {% endblock content %}
