--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,8 @@
 
   <link rel="stylesheet" href="{% static 'css/custom.css '%}">
   <link rel='shortcut icon' type='image/x-icon' href="{% static 'img/favicon.ico' %}" />
+    {% block style %}
+    {% endblock %}
 </head>
 
 <body>
@@ -43,53 +45,6 @@
           </ul>
         </div>
         <ul class="navbar-nav navbar-right">
-          </li>
-            <div class="dropdown-menu dropdown-list dropdown-menu-right pullDown">
-              <div class="dropdown-header">
-                Notifications
-                <div class="float-right">
-                  <a href="#">Mark All As Read</a>
-                </div>
-              </div>
-              <div class="dropdown-list-content dropdown-list-icons">
-                <a href="#" class="dropdown-item dropdown-item-unread"> <span
-                    class="dropdown-item-icon bg-primary text-white"> <i class="fas
-												fa-code"></i>
-                  </span> <span class="dropdown-item-desc"> Template update is
-                    available now! <span class="time">2 Min
-                      Ago</span>
-                  </span>
-                </a> <a href="#" class="dropdown-item"> <span class="dropdown-item-icon bg-info text-white"> <i class="far
-												fa-user"></i>
-                  </span> <span class="dropdown-item-desc"> <b>You</b> and <b>Dedik
-                      Sugiharto</b> are now friends <span class="time">10 Hours
-                      Ago</span>
-                  </span>
-                </a> <a href="#" class="dropdown-item"> <span class="dropdown-item-icon bg-success text-white"> <i
-                      class="fas
-												fa-check"></i>
-                  </span> <span class="dropdown-item-desc"> <b>Kusnaedi</b> has
-                    moved task <b>Fix bug header</b> to <b>Done</b> <span class="time">12
-                      Hours
-                      Ago</span>
-                  </span>
-                </a> <a href="#" class="dropdown-item"> <span class="dropdown-item-icon bg-danger text-white"> <i
-                      class="fas fa-exclamation-triangle"></i>
-                  </span> <span class="dropdown-item-desc"> Low disk space. Let's
-                    clean it! <span class="time">17 Hours Ago</span>
-                  </span>
-                </a> <a href="#" class="dropdown-item"> <span class="dropdown-item-icon bg-info text-white"> <i class="fas
-												fa-bell"></i>
-                  </span> <span class="dropdown-item-desc"> Welcome to Otika
-                    template! <span class="time">Yesterday</span>
-                  </span>
-                </a>
-              </div>
-              <div class="dropdown-footer text-center">
-                <a href="#">View All <i class="fas fa-chevron-right"></i></a>
-              </div>
-            </div>
-          </li>
           <li class="dropdown"><a href="#" data-toggle="dropdown"
               class="nav-link dropdown-toggle nav-link-lg nav-link-user"> <img alt="image" src="{% static '/img/user.png' %}"
                 class="user-img-radious-style"> <span class="d-sm-none d-lg-inline-block"></span></a>
@@ -118,20 +73,35 @@
             </a>
           </div>
           <ul class="sidebar-menu">
+              {% if request.path == "/dashboard/" %}
             <li class="dropdown active">
               <a href="{% url 'dashboard_url' %}" class="nav-link"><i data-feather="monitor"></i><span>Dashboard</span></a>
             </li>
-            <li class="dropdown">
-              <a href="#" class="menu-toggle nav-link has-dropdown"><i
-                  data-feather="briefcase"></i><span>Footbol klublar</span></a>
-              <ul class="dropdown-menu">
-                <li><a class="nav-link" href="#">Ro`yxat</a></li>
-                <li><a class="nav-link" href="#">Qo`shish</a></li>
-              </ul>
+              {% else %}
+              <li class="dropdown">
+              <a href="{% url 'dashboard_url' %}" class="nav-link"><i data-feather="monitor"></i><span>Dashboard</span></a>
             </li>
+              {% endif %}
+            {% if request.path == "/clubs/" %}
+            <li class="dropdown active">
+              <a href="{% url 'clubs' %}" class="nav-link"><i
+                  data-feather="briefcase"></i><span>Footbol klublar</span></a>
+            </li>
+            {% else %}
+            <li class="dropdown">
+              <a href="{% url 'clubs' %}" class="nav-link"><i
+                  data-feather="briefcase"></i><span>Footbol klublar</span></a>
+            </li>
+            {% endif %}
+            {% if request.path == "/turnir/" %}
+            <li class="dropdown active">
+              <a href="{% url 'turnir_url' %}" class="nav-link"><i data-feather="command"></i><span>Turnirlar</span></a>
+            </li>
+            {% else %}
             <li>
               <a href="{% url 'turnir_url' %}" class="nav-link"><i data-feather="command"></i><span>Turnirlar</span></a>
             </li>
+            {% endif %}
           </ul>
         </aside>
       </div>
@@ -159,6 +129,9 @@
   <script src="{% static 'js/scripts.js' %}"></script>
   <!-- Custom JS File -->
   <script src="{% static 'js/custom.js' %}"></script>
+{% block script %}
+
+{% endblock %}
 </body>
 
 
